# etebase-java

./: Cargo.toml  ChangeLog.md  README.md  build.gradle  build.gradle.kts  settings.gradle.kts
client/: build.gradle
client/src/androidTest/java/com/etebase/client/: Service.java
client/src/main/java/com/etebase/client/exceptions/: HttpException.java  MsgPackException.java  NotFoundException.java  ServerErrorException.java  TemporaryServerErrorException.java
gradle/wrapper/: gradle-wrapper.properties
src/: java_glue.rs.in  jni_typemaps.rs  lib.rs
src/main/java/com/etesync/journalmanager/: BaseManager.kt  Constants.kt  Crypto.kt  Exceptions.kt  GsonHelper.java  JournalAuthenticator.kt  JournalEntryManager.kt  JournalManager.kt  Logger.kt  UserInfoManager.kt
src/main/java/com/etesync/journalmanager/model/: CollectionInfo.kt  SyncEntry.kt
src/main/java/com/etesync/journalmanager/util/: Base64.java  ByteUtil.java  TokenAuthenticator.kt
src/test/kotlin/com/etesync/journalmanager/: AuthenticatorTest.kt  EncryptionTest.kt  Helpers.kt  HttpClient.kt  ServiceTest.kt
src/test/kotlin/com/etesync/journalmanager/model/: CollectionInfo.kt
