[package]
name = "etebase-android"
description = "Android bindings to etebase-rs"
homepage = "https://www.etebase.com"
repository = "https://github.com/etesync/etebase-java"
version = "2.0.0"
authors = ["Tom Hacohen <tom@stosb.com>"]
edition = "2018"
license = "LGPL-2.1-only"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
flapigen = { git = "https://github.com/tasn/flapigen-rs", rev = "5ce81ec7454ee0e30363857612b3f2cbcc2afc79" }
env_logger = "^0.7"

[dependencies]
log = "0.4.6"
log-panics = "2.0"
android_logger = "0.8"
jni-sys = "0.3.0"
etebase = { git = "https://github.com/etesync/etesync-rs", rev = "c123e27af21fc8bc7bc0d0cfc1b8c0db493098e0", default-features = false }

[features]
default = ["android"]
android = []
