[package]
name = "etebase-android"
description = "Android bindings to etebase-rs"
homepage = "https://www.etebase.com"
repository = "https://github.com/etesync/etebase-java"
version = "2.3.1"
authors = ["Tom Hacohen <tom@stosb.com>"]
edition = "2018"
license = "BSD-3-Clause"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
flapigen = { git = "https://github.com/tasn/flapigen-rs", rev = "d2fbb9bd8ecb4ead986c295bffcfe889d9f47e8c" }
env_logger = "^0.7"

[dependencies]
log = "0.4.6"
log-panics = "2.0"
android_logger = "0.8"
jni-sys = "0.3.0"
etebase = { git = "https://github.com/etesync/etebase-rs", rev = "b3aad3e01fd602f3547e0af82d3bf1b5701b79a2", default-features = false }


[features]
default = ["android"]
android = []
